src/test/resources/testinput/cocos/invalid/invalidConstructorName.ocl
/* (c) https://github.com/MontiCore/monticore */
import example.CDs.AuctionCD;

ocl invalidConstructorName {
  context new auction(Policy p)
  pre Test: p != null;
  post Test: policy == p && status == INITIAL && messages.isEmpty;
}
